--- a/src/app/loginsuccess/loginsuccess.component.html
+++ b/src/app/loginsuccess/loginsuccess.component.html
@@ -1,4 +1,5 @@
-<!--<div>
+<p>loginsuccess works!</p>
+<div>
   <app-header></app-header>
   </div>
 
@@ -8,8 +9,7 @@
         <app-sidebar></app-sidebar>
       </div> 
       <div class="col-lg-10">
-        <router-outlet></router-outlet>
+        <app-video-listing></app-video-listing>
       </div>  
   </div> 
-</div>--> 
-<router-outlet></router-outlet>
+</div>
